--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "require": {
         "slim/slim": "^3.0",
-        "slim/twig-view": "^2.3"
+        "slim/twig-view": "^2.3",
+        "filp/whoops": "^2.1",
+        "whoops/soap": "^1.0",
+        "symfony/var-dumper": "^3.3"
     },
     "autoload": {
         "psr-4": {
