--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,16 @@
         "slim/twig-view": "^2.3",
         "filp/whoops": "^2.1",
         "whoops/soap": "^1.0",
-        "symfony/var-dumper": "^3.3"
+        "symfony/var-dumper": "^3.3",
+        "guzzlehttp/guzzle": "^6.1"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.4",
+        "phpunit/php-code-coverage": "^5.2"
     }
 }
